   tracing through an "import x as y". This happened only if we invoked
   from a directory other than where the debugged program lives and we
   stepped into such an imported method. The fix is to save the the
   dirname of the script in the debugger instance variable.

*  Fix bug when using set trace introduced in 1.16 in adding "command".

*  Add "directory" and "show directories" commands. 

* All show and info commands (will) allow abbreviations in the
  subcommand name. E.g. "show dir" for "show directories"

* The "turn-on-pydbtrack" command turns removes py-pdbtrack from
  comint-output-filter-functions which was removing the cursor in the
  source window.

* Tolerance for version 2.3.4. (It's what I have to use at work.)

1.16
2006-04-27

*  Add gdb "command" - run commands on a breakpoint. Code from current
   pdb sources, but we follow gdb more closely.

*  Allow one specify in the Pdb class Cmd's "completekey" binding.
   (Also in current pdb sources.)

*  Line tracing now shows source text.

*  Document how to turn on and off from program control. 

* "list" command is more like gdb's and can accept filename:lineo if
   that's all that's given (Suggestion from Matt Fleming). Was also
   off by one in line number listings.

*  Made pydb document corrections for the "source" command

*  Reword documentation on how set_trace() works based on confusion
   observed in comp.lang.python. Note speed implications of using this over 
   setting a breakpoint.

*  Note in Documentation that "jump" can be used to leave a loop. (Also
   based on a query in comp.lang.python)

*  Remove pdb backwards-compatibile runctx. This is a new debugger.

1.15
2006-03-25

* Add gdb history commands:
    set history ..., show history ..., show commands

* Add command completion (gdb: complete)

* Add log redirection (gdb: set logging, show logging)

* Add gdb directory commands: cd, pwd

* Add --cd invocation option 

* Add installation section in documentation
