@@ -1,4 +1,4 @@
-"""$Id: gdb.py.in,v 1.18 2006/06/20 12:19:16 rockyb Exp $
+"""$Id: gdb.py.in,v 1.19 2006/06/21 10:33:35 rockyb Exp $
 Largely handles gdb-like command processing.
 (See also @PACKAGE_NAME@.doc for documentation.)"""
 
@@ -30,13 +30,13 @@ class Gdb(Bdb, Cmd):
         self._program_sys_argv    = []   # sys.argv after options are stripped
         self._re_linetrace_delay  = re.compile(r'\s*linetrace\s*')
         self._wait_for_mainpyfile = False
-        self._set_cmds =  ['args',      'basename', 'cmdtrace', 'history',
-                           'linetrace', 'linetrace delay',
-                           'listsize',  'logging',  'prompt']
-        self._show_cmds = ['args',      'basename', 'cmdtrace', 'directories',
-                           'linetrace', 'linetrace delay',
-                           'listsize',  'logging',  'prompt',
-                           'version']
+        self._set_cmds =  ['args',        'basename', 'cmdtrace', 'history',
+                           'interactive', 'linetrace',
+                           'listsize',    'logging',  'prompt']
+        self._show_cmds = ['args',        'basename', 'cmdtrace', 'commands',
+                           'history',
+                           'interactive', 'linetrace',
+                           'listsize',  'logging',  'prompt', 'version']
         self._info_cmds = ['args',      'break',    'display', 
                            'globals',   'line',     'locals',
                            'program',   'source']
@@ -228,22 +228,22 @@ class Gdb(Bdb, Cmd):
         """Show help for a single 'info' subcommand"""
         if label:
             self.msg_nocr("info %s --" % cmd)
-        if cmd == 'args':
+        if 'args'.startswith(cmd):
             self.msg("Argument variables of current stack frame")
-        elif cmd == 'display':
+        elif 'display'.startswith(cmd):
             self.msg("Expressions to display when program stops, " +
                      "with code numbers.")
-        elif cmd == 'break':
+        elif 'break'.startswith(cmd):
             self.msg("Status of user-settable breakpoints")
-        elif cmd == 'globals':
+        elif 'globals'.startswith(cmd):
             self.msg("Global variables of current stack frame")
-        elif cmd == 'line':
+        elif 'line'.startswith(cmd) and len(cmd) > 1:
             self.msg("Current line number in source file")
-        elif cmd == 'locals':
+        elif 'locals'.startswith(cmd) and len(cmd) > 1:
             self.msg("Local variables of current stack frame")
-        elif cmd == 'program':
+        elif 'program'.startswith(cmd):
             self.msg("Execution status of the program")
-        elif cmd == 'source':
+        elif 'source'.startswith(cmd):
             self.msg("Information about the current Python file")
         else:
             self.undefined_cmd("help info", cmd)
@@ -252,25 +252,25 @@ class Gdb(Bdb, Cmd):
         """Show help for a single set subcommand"""
         if label:
             self.msg_nocr("set %s --" % cmd)
-        if cmd == 'args':
+        if 'args'.startswith(cmd):
             self.msg("Set argument list to give program being debugged when it is started")
-        elif cmd == 'basename':
+        elif 'basename'.startswith(cmd):
             self.msg("Set short filenames (the basename) in debug output")
-        elif cmd == 'cmdtrace':
+        elif 'cmdtrace'.startswith(cmd):
             self.msg("Set to show lines read from the " +
                      "debugger command file")
-        elif cmd == 'history':
+        elif 'history'.startswith(cmd):
             self.msg("Generic command for setting command history parameters")
-        elif cmd == 'interactive':
+        elif 'interactive'.startswith(cmd):
             self.msg("Set whether we are interactive")
-        elif cmd == 'linetrace':
+        elif 'linetrace'.startswith(cmd) and len(cmd) > 2:
             self.msg("Set line execution tracing and delay on tracing")
-        elif cmd == 'listsize':
+        elif 'listsize'.startswith(cmd) and len(cmd) > 2:
             self.msg("Set number of source lines the debugger will list "
                      + "by default")
-        elif cmd == 'logging':
+        elif 'logging'.startswith(cmd) and len(cmd) > 1:
             self.msg("Set logging options")
-        elif cmd == 'prompt':
+        elif 'prompt'.startswith(cmd):
             self.msg("Set debugger's prompt")
         else:
             self.undefined_cmd("help set", cmd)
@@ -279,29 +279,29 @@ class Gdb(Bdb, Cmd):
         """Show help for a single set subcommand"""
         if label:
             self.msg_nocr("show %s --" % cmd)
-        if cmd == 'args':
+        if 'args'.startswith(cmd):
             self.msg("Show argument list to give debugged program on start")
-        elif cmd == 'basename':
+        elif 'basename'.startswith(cmd):
             self.msg("Show if we are to show short of long filenames")
-        elif cmd == 'cmdtrace':
+        elif 'cmdtrace'.startswith(cmd) and len(cmd) > 1:
             self.msg("Show if we are to show debugger commands " +
                      "before running")
-        elif cmd == 'commands':
+        elif 'commands'.startswith(cmd) and len(cmd) > 1:
             self.msg("Show the history of commands you typed")
-        elif cmd == 'history':
+        elif 'history'.startswith(cmd):
             self.msg("Generic command for showing command history parameters")
-        elif cmd == 'interactive':
+        elif 'interactive'.startswith(cmd):
             self.msg("Show whether we are interactive")
-        elif cmd == 'linetrace':
+        elif 'linetrace'.startswith(cmd):
             self.msg("Show the line tracing status. Can also add 'delay'")
-        elif cmd == 'listsize':
+        elif 'listsize'.startswith(cmd):
             self.msg("Show number of source lines the debugger will list "
                      + "by default")
-        elif cmd == 'logging':
+        elif 'logging'.startswith(cmd):
             self.msg("Show logging options")
-        elif cmd == 'prompt':
+        elif 'prompt'.startswith(cmd):
             self.msg("Show debugger's prompt")
-        elif cmd == 'version':
+        elif 'version'.startswith(cmd):
             self.msg("Show what version of the debugger this is")
         else:
             self.undefined_cmd("help show", cmd)
@@ -1135,8 +1135,11 @@ the default."""
                          bpnum)
 
     def do_info(self, arg):
+
         """Generic command for showing things about the program being
-        debugged."""
+        debugged. You can give unique prefix of the name of a subcommand to
+        get info about just that subcommand."""
+
         if not arg:
             self.help_info([])
             return
@@ -1472,7 +1475,11 @@ assignment to the variable __return__."""
         os.system(arg)
 
     def do_show(self, arg):
-        """Generic command for showing things about the debugger."""
+
+        """Generic command for showing things about the debugger.  You
+        can give unique prefix of the name of a subcommand to get info
+        about just that subcommand."""
+
         if not arg:
             for subcommand in self._show_cmds:
                 self.msg_nocr("%s: " % subcommand)
@@ -1480,7 +1487,6 @@ assignment to the variable __return__."""
             return
 
         args = arg.split()
-        ## FIXME Change all to use startswith.
         if 'args'.startswith(args[0]):
             self.msg("Argument list to give program being debugged " +
                       "when it is started is ")
@@ -1736,10 +1742,8 @@ was reached.
     # Note: format of help is compatible with ddd.
     def help_info(self, *args):
         """Generic command for showing things about the program being debugged."""
-        subcmds=("args", "break", "display", "globals", "line",
-                 "locals", "program", "source")
         self.subcommand_help('info', getattr(self, 'help_info').__doc__,
-                             subcmds, self.__help_info, args[0])
+                             self._info_cmds, self.__help_info, args[0])
 
     def help_pydb(self, *arg):
         help()
@@ -1748,20 +1752,14 @@ was reached.
     def help_set(self, *args):
         """This command modifies parts of the debugger environment.
 You can see these environment settings with the 'show' command."""
-        subcmds=("args", "basename", "cmdtrace", "history",
-                 "interactive",
-                 "linetrace", "listsize", "logging", "prompt")
         self.subcommand_help('set', getattr(self, 'help_set').__doc__,
-                             subcmds, self.__help_set, args[0])
+                             self._set_cmds, self.__help_set, args[0])
 
     # Note: format of help is compatible with ddd.
     def help_show(self, *args):
         """Generic command for showing things about the debugger."""
-        subcmds=("args",      "basename",   "cmdtrace",  "commands",
-                 "history",   "interactive", "linetrace", "listsize",
-                 "logging",   "prompt", "version")
         self.subcommand_help('show', getattr(self, 'help_show').__doc__,
-                             subcmds, self.__help_show, args[0])
+                             self._show_cmds, self.__help_show, args[0])
 
     def help_unalias(self):
         print """unalias name
